cmake_minimum_required(VERSION 3.19)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(RomanToInt cpp/RomanToInt.cpp )
add_executable(commonPrefix cpp/CommonPrefix_est.cpp)
add_executable(ValidBrackets cpp/ValidBrackets.cpp)
add_executable(RemoveDuplicates cpp/RemoveDuplicates.cpp)
add_executable(GradeRank cpp/GradeRank.cpp)